# pal

./: Cargo.toml  Makefile  README.md  future.md  pal.default.toml  pyproject.toml
.github/workflows/: release.yml
examples/: config.toml  example.conf.yaml
plugins/actions/cmd/: plugin.toml  run.sh
plugins/actions/copy/: run.sh
plugins/actions/open/: plugin.toml  run.sh
plugins/docker/: docker  metadata.json
plugins/frontends/fzf/: run.sh
plugins/frontends/rofi/: plugin.toml  run.sh
plugins/frontends/vicinae/: plugin.toml  run.sh
plugins/palettes/audio/: plugin.toml  run.sh
plugins/palettes/ble/: plugin.toml  run.sh
plugins/palettes/calc/: plugin.toml  run.sh
plugins/palettes/chars/: plugin.toml
plugins/palettes/clipboard/: plugin.toml
plugins/palettes/colors/: plugin.toml
plugins/palettes/commands/: data.json  plugin.toml  run.sh
plugins/palettes/docker/: plugin.toml  run.sh
plugins/palettes/emoji/: data.json  plugin.toml
plugins/palettes/gh-reviews/: plugin.toml  run.sh
plugins/palettes/gl-reviews/: plugin.toml  run.sh
plugins/palettes/ha-services/: plugin.toml  run.sh
plugins/palettes/ha-states/: plugin.toml  run.sh
plugins/palettes/hue/: plugin.toml  run.sh
plugins/palettes/icons/: plugin.toml
plugins/palettes/ip/: plugin.toml  run.sh
plugins/palettes/media/: plugin.toml  run.sh
plugins/palettes/nerd/: data.json  plugin.toml
plugins/palettes/op/: plugin.toml  run.sh
plugins/palettes/power/: plugin.toml
plugins/palettes/repos/: plugin.toml  run.sh
plugins/palettes/systemd/: plugin.toml  run.sh
plugins/psg/: metadata.json  psg
src/: action.rs  config.rs  frontend.rs  main.rs  palette.rs  plugin.rs  remote.rs  util.rs
src/builtin/: apps.rs  bookmarks.rs  builtin.toml  combine.rs  file_util.rs  fzf.rs  mod.rs  pals.rs  psg.rs  rofi.rs  ssh.rs  stdin.rs
src/pal/: __main__.py  actions.py  cli.py  config.py  defaults.yaml  plugins.py  runner.py
sstest/: Dockerfile  capture.sh  items.jsonl  pal  rofi-theme.rasi
tests/: conftest.py  test_cli_smoke.py
(+59 files in other folders)
