[package]
name = "pal"
version = "0.1.2"
edition = "2021"
description = "A fast, extensible command palette for Linux"
license = "MIT"
repository = "https://github.com/zcag/pal"
keywords = ["cli", "launcher", "palette", "rofi", "fzf"]
categories = ["command-line-utilities"]

[[bin]]
name = "pal"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
