[project]
name = "pal"
version = "0.0.2"
description = "Command palette framework (starter + fzf frontend)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "dynaconf>=3.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
pal = "pal.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pal = ["defaults.yaml"]
